Fix borders on small viewport

--- a/css/cards.css
+++ b/css/cards.css
@@ -21,7 +21,7 @@
 
 .work-wrapper-r-alt {
     background-color: #fff;
-    border-radius: 0 15px 15px 0;
+    border-radius:  0 15px 15px 0;
     padding: 25px 45px;
     box-shadow: 0 70px 140px 0 rgba(130,136,171,.2);
     font-family: 'Playfair Display', serif;
@@ -223,6 +223,24 @@ h3.title-alt {
         padding: 25px 45px;
     }
     
+
+    .work-wrapper-r-alt {
+        background-color: #fff;
+        border-radius: 0 0 15px 15px ;
+        padding: 25px 45px;
+        box-shadow: 0 70px 140px 0 rgba(130,136,171,.2);
+        font-family: 'Playfair Display', serif;
+    }
+    
+    .work-wrapper-l-alt {
+        background: #ee9ca7; 
+        background: -webkit-linear-gradient(to bottom, #ffdde1, #ee9ca7); 
+        background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
+        border-radius: 15px 15px 0 0;
+        box-shadow: 0 70px 140px 0 rgba(130,136,171,.2);
+        padding: 25px 45px;
+    }
+    
     .text-custom-center{
         text-align:center;
     }
@@ -272,8 +290,19 @@ h3.title-alt {
     .btn.btn-talk, .btn.btn-work{
         margin-top: 30px !important;
     }
+
+    .btn.btn-red {
+        margin-top: 8%;
+        margin-bottom: 8%;
+    }
+
+    
 }
 
+.form{
+    width: 75%;
+    margin: 0 auto;
+}
 .bg-orange{
     background: #ffc07c; 
 }
@@ -287,5 +316,11 @@ h3.title-alt {
 }
 
 .bg-pink{
-    background: #ffa7a7
+    background: #ffa7a7;
 }
+
+.bg-purple{
+    background: #a88dea;
+}
+
+
