--- a/css/general.css
+++ b/css/general.css
@@ -1200,10 +1200,6 @@ color: #ECEBEB;
 	}	
 }
 
-footer {
-	background-color: #f8f8f8;
-	padding: 50px 0;
-}
 
 p.copyright {
 	margin: 15px 0 0;
@@ -1261,4 +1257,16 @@ p.copyright {
 		display: none;
 	}
 
+}
+/* 
+div.footer{
+	background: #a88dea;
+	padding: 5%;
+		border-radius:  15px 15px 15px 15px;
+		padding: 25px 45px;
+		box-shadow: 0 70px 140px 0 rgba(130,136,171,.2);
+		margin-bottom: 5%;
+} */
+li.social a{
+	margin-right: 3%;
 }
