--- a/css/style.css
+++ b/css/style.css
@@ -1170,7 +1170,7 @@ label {
 }
 .form-group.focus .form-control,
 .form-control:focus {
-  border-color: #1abc9c;
+  border-color:  #a88dea;
   outline: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -4446,21 +4446,7 @@ body.vjs-full-window {
     background-image: url(../images/login/imac-2x.png);
   }
 }
-footer {
-  background-color: #edeff1;
-  color: #bac1c8;
-  font-size: 15px;
-  padding: 0;
-}
-footer a {
-  color: #9aa4af;
-  font-weight: 700;
-}
-footer p {
-  font-size: 15px;
-  line-height: 20px;
-  margin-bottom: 10px;
-}
+
 .footer-title {
   margin: 0 0 22px;
   padding-top: 21px;
